# verity

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_V2.md  QMA_Phase2_Dedup_Conflict_Agents.md  QMA_Phase3_Synthesis_CitationGraph_v2.md  QMA_Phase4_DevilsAdvocate_SmokeTest.md  README.md  crawler_system_fix.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
agents/: citation_graph_agent.py  conflict.py  contracts.py  crawler.py  decomposer.py  dedup.py  devil_advocate.py  publisher.py  synthesis.py
agents/prompts/: conflict.py  crawler.py  decomposer.py  devil_advocate.py  synthesis.py
api/: main.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
fusengine-agents-react-shadcn-1.0.2/: SKILL.md
fusengine-agents-react-shadcn-1.0.2/references/: accordion.md  alert-dialog.md  alert.md  aspect-ratio.md  avatar.md  badge.md  breadcrumb.md  button.md  calendar.md  card.md  carousel.md  chart.md  checkbox.md  collapsible.md  command.md  configuration.md  context-menu.md  dialog.md  drawer.md  dropdown.md  field-patterns.md  form-examples.md  hover-card.md  (+28 more)
graph/: graph.py  state.py
reports/: verity_0661c985.json  verity_615908f7.json  verity_7452b082.json  verity_8fd92afd.json  verity_92776b67.json  verity_9d774392.json  verity_9d774392.md
services/: citation_graph.py  factguard.py  firecrawl_client.py  langsmith_setup.py  llm_factory.py  pdf_exporter.py  pinecone_client.py  source_router.py
tests/: test_conflict.py  test_crawler.py  test_decomposer.py  test_dedup.py
(+6 files in other folders)
